kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: navyojana
  labels:
    name: navyojana
