kubernetes/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-proxy
  namespace: navyojana
spec:
  type: ExternalName
  externalName: monitoring-grafana.monitoring.svc.cluster.local
